--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -24,7 +24,7 @@ html
         div.cards__left-colum-item
           +room-search('Найдём номера под ваши пожелания')
         div.cards__left-colum-item
-          +account-registration('Регистрация аккаунта')
+          +account-registration('Регистрация аккаунта','перейти к оплате')
       div.cards__centre-colum
         div.cards__centre-colum-item
           +price-room()
