--- a/src/pages/web/registration/registration.pug
+++ b/src/pages/web/registration/registration.pug
@@ -20,7 +20,7 @@ html
     
     div.registration
       div.registration__items
-        +account-registration('Регистрация аккаунта')
+        +account-registration('Регистрация аккаунта','зарегистрироваться')
       
     include ../../../components/footer/footer.pug
 
