--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -24,7 +24,7 @@ html
     div.room-details
       div.room-details__images
         div.room-details__images-left
-          img(src="./img/left-big.png" alt="")
+          img(src="./img/left-big.png" alt="" class='room-details__images-left-img')
         div.room-details__images-right
           img(src="./images/right-top.png" alt="" class='room-details__images-right-top')
           img(src="./images/right-bottom.png" alt="" class='room-details__images-right-bottom')
