--- a/src/components/commentary/commentary.scss
+++ b/src/components/commentary/commentary.scss
@@ -12,23 +12,23 @@
   &__body {
     display: flex;
     margin-top: 10px;
-    justify-content: space-between;
   }
-
+  
   &__header-text {
     margin-left: 10px;
   }
-
+  
   &__header-name {
     font-weight: bold;
     margin-bottom: 5px;
   }
-
+  
   &__body-text {
     max-width: 653px;
     color: rgba(31, 32, 65, 0.75);
     font-size: 14px;
     line-height: 24px;
+    margin-left: 16px;
   }
   
 }
