--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -1,11 +1,12 @@
 .like-button {
-  width: 40px;
+  min-width: 40px;
   height: 20px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 10px;
   background: url('./images/favorite-painted.svg')no-repeat 5px 5px;
   cursor: pointer;
   display: flex;
+  
   &__count {
     color: rgba(31, 32, 65, 0.25);
     font-size: 10px;
