--- a/src/pages/web/search-room/search-room.pug
+++ b/src/pages/web/search-room/search-room.pug
@@ -41,7 +41,7 @@ html
             })
 
           div.search-room__row-left-item          
-            +range-slider('диапазон цены')
+            +range-slider('диапазон цены','Стоимость за сутки прибывания в номере')
           
           div.search-room__row-left-item            
             +checkbox-list({
