--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -2,7 +2,8 @@
 .head {
   max-width: 100%;
   background-color: #fff;
-
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  
   &__item {
     display: flex;
     justify-content: flex-end;
