--- a/src/pages/web/search-room/search-room.scss
+++ b/src/pages/web/search-room/search-room.scss
@@ -5,19 +5,18 @@
   &__row {
     padding: 30px 0px 0px 140px;
     display: flex;
-    margin-bottom: 74px;
+    margin-bottom: 71px;
     position: relative;
 
     &::before {
       content: "";
       width: 100%;
       height: 1px;
-      background-color: rgb(229, 229, 229);
+      border: 1px solid rgba(31, 32, 65, 0.25);
       position: absolute;
       bottom: -72px;
       left: 0px;
     }
-
   }
 
   &__row-left {
@@ -25,56 +24,91 @@
   }
 
   &__row-left-item {
-    margin-bottom: 29px;
+    margin-bottom: 26px;
 
     &:nth-child(1) {
       margin-bottom: 20px;
     }
-    
+
     &:nth-child(3) {
-      margin-bottom: 57px;
+      margin-bottom: 29px;
     }
 
     &:nth-child(4) {
-      margin-bottom: 31px;
+      margin-bottom: 29px;
     }
 
     &:nth-child(5) {
-      margin-bottom: 31px;
+      margin-bottom: 21px;
     }
 
     &:nth-child(6) {
       margin-bottom: 27px;
     }
-
   }
 
   &__row-right {
     margin-left: 59px;
   }
-  
+
   &__row-right-items {
     display: flex;
     flex-wrap: wrap;
   }
-  
+
   &__row-right-title {
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
-    margin-bottom:22px;
+    margin-bottom: 22px;
   }
-  
+
   &__row-right-item {
     margin-right: 13px;
     margin-bottom: 20px;
+
+    &:nth-child(4) {
+      margin-bottom: 23px;
+    }
+    &:nth-child(8) {
+      margin-bottom: 23px;
+    }
   }
-  
-  &__row-right-pagination{
+
+  &__row-right-pagination {
     display: flex;
     justify-content: center;
     margin-right: 155px;
-    margin-top: 8px;
+    margin-top: 7px;
   }
-  
+
+  @media (max-width: 1128px) {
+    &__row{
+      padding: 20px 0px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    &__row-right-title{
+      text-align: center;
+    }
+
+    &__row-left{
+      margin: 26px;
+    }
+
+    &__row-right{
+      margin-left: 0px;
+      max-width: 570px;
+    }
+
+    &__row-right-items{
+      justify-content: center;
+    }
+
+    &__row-right-pagination{
+      margin-right:0px
+    }
+
+  }
 }
