fix Form-elements page #15

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -31,7 +31,7 @@
     font-size: 15px;
     line-height: 24px;
     color: rgba(31, 32, 65, 0.75);
-    background: url('./img/arrow-down.svg')93% 57% no-repeat;
+    background: url('./img/check-mark-opacity-50.svg')90% 49% no-repeat;
     &::placeholder {
       color: rgba(31, 32, 65, 0.25);
       font-size: 14px;
