--- a/src/components/drop-down-bed/drop-down-bed.scss
+++ b/src/components/drop-down-bed/drop-down-bed.scss
@@ -21,7 +21,7 @@
     margin-bottom: 5px;
   }
 
-  &__title-button {
+  &__input {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,11 +32,11 @@
     color: rgba(31, 32, 65, 0.75);
     border-radius: 4px 4px 0px 0px;
     width: 100%;
-    background: url('./img/arrow-down.svg') no-repeat 232px 6px;
+    background: url('./img/check-mark-opacity-75.svg') no-repeat 237px 16px;
     cursor: pointer;
   }
 
-  &__title-button-img {
+  &__input-img {
     margin-right: 9px;
   }
 
