--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -11,7 +11,7 @@
     margin-bottom: 3px;
   }
 
-  &__title-button {
+  &__input {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -22,11 +22,11 @@
     color: rgba(31, 32, 65, 0.75);
     border-radius: 4px 4px 0px 0px;
     width: 100%;
-    background: url(./img/arrow-down.svg) no-repeat 97% 53%;
+    background: url(./img/check-mark-opacity-75.svg) no-repeat 95.5% 48%;
     cursor: pointer;
   }
 
-  &__title-button-img {
+  &__input-img {
     margin-right: 9px;
    
   }
