--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -67,14 +67,14 @@ html
               'Мурад Сарафанов',
               '5 дней назад',
               'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.',
-              './img/man.png')
+              './img/avatar-murat-sarafanof.png')
 
             div.room-details__commentary-item
               +commentary(
               'Патрисия Стёклышкова',
               'Неделю назад',
               'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент',
-              './img/image4.png')
+              './img/avatar-patrisiya-steklishkova.png')
 
           div.room-details__regulations
             div.room-details__regulations-item
