fix #22 Registration page

--- a/src/pages/web/registration/registration.scss
+++ b/src/pages/web/registration/registration.scss
@@ -11,4 +11,12 @@
   &__items{
     margin-left: 6px;
   }
+  @media (max-width:400px) {
+    
+    &__items{
+      margin-left: 0px;
+    }
+  }
+
+
 }
