fix #19 Search room page

--- a/src/components/calendar/calendar.pug
+++ b/src/components/calendar/calendar.pug
@@ -23,4 +23,4 @@ mixin calendar(options = {})
             input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
       else
         div.calendar__title=title
-        input(class="calendar__input js-calendar__input"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
+        input(class="calendar__input js-calendar__input calendar__input-background-left-94"  type="text" name="date_from" placeholder="ДД.ММ.ГГГГ" readonly=true)
