--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -43,6 +43,10 @@
     &:hover {
       border: 1px solid rgba(31, 32, 65, 0.5);
     }
+    
+    &-background-left-94{
+      background-position: 94% 49%;
+    }
   }
 
   &__buttons {
