fix #23 fix final

--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -20,7 +20,7 @@ mixin head(options = {})
   header.head
     div(class="head__item")
       a(href="index.html").head__nav-list-item
-        img(src="./img/logo.svg" alt="")
+        img(src="./img/logo.svg" alt="logo")
       nav.head__nav
         ul.head__nav-list
           -for(let {text,href,flag,isBold} of list)
