--- a/src/components/slide/slide.pug
+++ b/src/components/slide/slide.pug
@@ -21,7 +21,7 @@ mixin slide(options = {})
     div.slick__slide
       -for(let i=0;i<img.length;i++)
         div.slick__slide-item
-          img(class='slick__slide-img' src=img[i], alt="")
+          img(class='slick__slide-img' src=img[i], alt="room-photo")
           
     div.slick__slide-footer
       div.slick__slide-footer-text
