--- a/src/pages/web/room-details/room-details.pug
+++ b/src/pages/web/room-details/room-details.pug
@@ -24,10 +24,10 @@ html
     div.room-details
       div.room-details__images
         div.room-details__images-left
-          img(src="./img/left-big.png" alt="" class='room-details__images-left-img')
+          img(src="./img/left-big.png" alt="room-photo" class='room-details__images-left-img')
         div.room-details__images-right
-          img(src="./images/right-top.png" alt="" class='room-details__images-right-top')
-          img(src="./images/right-bottom.png" alt="" class='room-details__images-right-bottom')
+          img(src="./images/right-top.png" alt="room-photo" class='room-details__images-right-top')
+          img(src="./images/right-bottom.png" alt="room-photo" class='room-details__images-right-bottom')
       
       div.room-details__description
         div.room-details__description-left
